--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             <a href="https://chemtradeasia.com" class="a-content">
                 <img src="img/test.JPG" class="img-content" alt="">
                 <p>Ini Foto Gw ya</p>
+
+                <!-- data start -->
+                <div id="biodata">
+                    
+                </div>
+                <!-- data end -->
+
             </a>
         </div>
 
@@ -55,5 +62,8 @@
 
 
     </div>
+
+    <script src="data.js" type="text/javascript"></script>
+
 </body>
 </html>
